<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvPersonalityA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/tvPersonalityA"
                android:textSize="16sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spPA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/tvPersonalityB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/tvPersonalityB"
                android:textSize="16sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spPB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/tvPersonalityC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/tvPersonalityC"
                android:textSize="16sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spPC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/tvPersonalityD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/tvPersonalityD"
                android:textSize="16sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spPD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/tvMood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/tvMood"
                android:textSize="16sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spMood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <Button
            android:id="@+id/cekLagu"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cek_lagu"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <TextView
            android:id="@+id/tvPersonality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/kepribadian"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cekLagu" />

        <TextView
            android:id="@+id/personality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPersonality"
            app:layout_constraintTop_toBottomOf="@+id/cekLagu"
            tools:text="INTP" />

        <TextView
            android:id="@+id/tvLagu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/rekomendasi_lagu"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPersonality" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLagu"
            tools:listitem="@layout/item_lagu"/>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            tools:text="JIProlog Copyright" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
<!--
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:fadingEdgeLength="5dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/editView">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="ifContentScrolls"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:isScrollContainer="true"
            android:textSize="16sp"/>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/editView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextQuery"
            android:layout_alignBottom="@+id/editTextQuery"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="JIP:-"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <AutoCompleteTextView
            android:id="@+id/editTextQuery"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_toRightOf="@id/prompt"
            android:layout_toLeftOf="@+id/imageViewEnter"
            android:layout_toEndOf="@id/prompt"
            android:layout_toStartOf="@+id/imageViewEnter"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="10dp"
            android:hint="Type your query"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/imageViewEnter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/editTextQuery"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:focusable="true"
            android:src="@drawable/ic_baseline_play_circle_outline_24"/>

    </RelativeLayout>

</RelativeLayout>-->
